# airtraffic-digital-twin

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  airflow.db  docker-compose.yml  pyproject.toml  telegraf.conf
src/: __init__.py
src/airtraffic/: get_token.py  test.py
src/airtraffic/config/: config.py
src/airtraffic/database/: redis_db.py
src/airtraffic/digital_twin/: main.py
src/airtraffic/kafka/: producer.py
