[project]
name = "airtraffic-digital-twin"
version = "0.1.0"
description = "Project about airtraffic digital twins"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-functions>=1.23.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "ruff>=0.12.3",
    "traffic>=2.13",
]

[tool.setuptools]
package-dir = {"" = "src"}
